--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "airbnb"
     ],
     "rules": {
+      "linebreak-style": 0,
       "jsx-a11y/no-autofocus": 0,
       "implicit-arrow-linebreak": 0,
       "react/destructuring-assignment": 0,
